--- a/prelim/content/background-opt.tex
+++ b/prelim/content/background-opt.tex
@@ -20,7 +20,7 @@ Words in \textit{italics} are technical terms that are used used to describe var
 
 The mathematical formulation of a general optimization problem is as follows:
 
-\begin{equation}\begin{split}
+\begin{equation}\begin{split}\label{eq:bg:opt:optimization_problem}
   \mbox{minimize:}  \quad & f\left(\textbf{x}\right) \\
                           & \textbf{x} \in \mathbb{R}^n \\
   \mbox{subject to:}\quad & \textbf{g}_L \leq \textbf{g}\left(\textbf{x}\right) \leq \textbf{g}_U \\
