--- a/prelim/content/background-pert.tex
+++ b/prelim/content/background-pert.tex
@@ -29,16 +29,16 @@ Similarly, the adjoint transport equation in operator notation is given by
 where $H^+$ is the adjoint transport operator, $\psi^+$ is the adjoint angular flux, and $q^+$ is the adjoint source.
 
 In the perturbed system, the forward and adjoint transport equations are given by
-\begin{equation}\label{eq:bg:pt:green29_pert}
+\begin{equation}\label{eq:bg:pt:green29_perturbed}
   \bar{H}\bar{\psi} = q
 \end{equation}
 and
-\begin{equation}\label{eq:bg:pt:green163_pert}
+\begin{equation}\label{eq:bg:pt:green163_perturbed}
   \bar{H}^+\bar{\psi}^+ = q^+,
 \end{equation}
 where $\bar{H}$ is the perturbed transport operator, $\bar{\psi}$ is the perturbed flux, $\bar{H}^+$ is the perturbed adjoint transport operator, and $\bar{\psi}^+$ is the perturbed adjoint flux.
 
-Combining Equations \ref{eq:bg:pt:green29} and \ref{eq:bg:pt:green29_pert} and rearranging terms yields the following identity:
+Combining Equations \ref{eq:bg:pt:green29} and \ref{eq:bg:pt:green29_perturbed} and rearranging terms yields the following identity:
 \begin{equation}\label{eq:bg:pt:green44a}\begin{split}
   H\psi             & = \bar{H}\bar{\psi} \\
   H\psi             & = \left(H+\delta H\right)\left(\psi+\delta\psi\right) \\
