--- a/prelim/content/testprob.tex
+++ b/prelim/content/testprob.tex
@@ -153,7 +153,7 @@ This means that the closer a thermal neutron is to the detector, the more likely
 \end{figure}
 
 The scalar contributon flux for energy groups 2 and 25 are shown in Figures \ref{fig:tp:scalar_flux_con_g02} and \ref{fig:tp:scalar_flux_con_g25}, and the scalar energy-integrated contributon flux is shown in Figure \ref{fig:tp:scalar_flux_con_total}.
-Equation \ref{eq:bg:rt:scalar-contributon}, repeated here:
+Equation \ref{eq:bg:rt:scalar_contributon}, repeated here:
 \begin{equation*}
   \Phi\left(\vec{r},E\right) \equiv
   \int_{4\pi}\psi\left(\vec{r},\hat{\Omega},E\right)\psi^+\left(\vec{r},-\hat{\Omega},E\right)d\hat{\Omega}.
@@ -191,7 +191,7 @@ Thus, after noting that the directionality of the adjoint flux is reversed in th
 \label{sec:bg:tp:dr}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Equation \ref{eq:dr:dr_pos_final}, repeated here:
+Equation \ref{eq:dr:dr_function_of_position_final}, repeated here:
 \begin{multline*}
   \delta R\left(\vec{r}\right) =
   \int_0^\infty\phi^+\left(\vec{r},E\right)\left(\int_0^\infty\delta\sigma_s\left(\vec{r},E^\prime\rightarrow E\right)\phi\left(\vec{r},E^\prime\right)dE^\prime\right)dE - \\
