--- a/prelim/prelim.tex
+++ b/prelim/prelim.tex
@@ -41,11 +41,11 @@
 
 \input{frontmatter/frontmatter}
 
-\input{content/intro}
-\input{content/background}
-\input{content/dR}
-\input{content/testprob}
-\input{content/proposal}
+\input{content/1-intro}
+\input{content/2-background}
+\input{content/3-dR}
+\input{content/4-testprob}
+\input{content/5-proposal}
 
 \bibliographystyle{ans}
 \bibliography{bibliography}
